Added TapiLine abstraction, Make it work TapiCall and TapiAddress work with the new abstraction

--- a/src/src/Atapi.csproj
+++ b/src/src/Atapi.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Interfaces\ICallFeatureSet.cs" />
     <Compile Include="Interfaces\ITapiCall.cs" />
     <Compile Include="Interfaces\ITapiAddress.cs" />
+    <Compile Include="Interfaces\ITapiLine.cs" />
     <Compile Include="TapiPhone.cs" />
     <Compile Include="Tones.cs" />
     <Compile Include="Exception.cs" />
